--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,40 @@
 }
 
 p {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   margin-right: 150px;
-  margin-left: 80px;
+  margin-left: 150px;
+  }
+
+  div
+  {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 150px;
+    margin-left: 150px;
+  }
+
+  img
+  {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 150px;
+    margin-left: 150px;
+  }
+
+  table
+  {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  h1
+  {
+    width:500px;
+    margin: 0 auto;
+    background: #2512;
+    text-align: center;
   }
