--- a/src/App.css
+++ b/src/App.css
@@ -40,24 +40,60 @@
 p {
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-right: 150px;
-  margin-left: 150px;
+  margin-right: 70px;
+  margin-left: 70px;
   }
 
+  p > span.font1
+  {
+    font-size: 1.3em;
+  }
+
+  p > span.font2
+  {
+    font-size: 1.3em;
+  }
+
+  p > span.font3
+  {
+    font-size: 1.3em;
+  }
+
+  p > span.font4
+  {
+    font-size: 1.3em;
+  }
+
+  p > span.font5
+  {
+    font-size: 1.3em;
+  }
+
+  p > span.font6
+  {
+    font-size: 1.3em;
+  }
+
+  p > span.font53
+  {
+    font-size: 1.3em;
+  }
+
+  
   div
   {
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-right: 150px;
-    margin-left: 150px;
+    margin-right: 70px;
+    margin-left: 70px;
   }
 
   img
   {
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-right: 150px;
-    margin-left: 150px;
+    margin-right: 70px;
+    margin-left: 70px;
   }
 
   table
